--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@ function onDeviceReady()
 	
 	kc=checkIfFileExists("locdata.txt");
 
-	if (started==0)	
-		{
-		Start();
-		}
-	setmypos();
+	//if (started==0)	
+//		{
+	//	Start();
+	//	}
+	//setmypos();
 	}
 // ------------------------
 
