--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ function onWatchSuccess(position)
 		<table>
 			<tr><td>მომხმ.:</td><td> <input id='myname' name='myname' value='youuser' size=12></td></tr>
 			<tr><td>პაროლი:</td><td> <input id='mypass' name='mypass' value='yourpass' size=12></td>
-			<td rowspan=2><a style='' href='Javascript: saveuser();'><img src='save.png'></a></td></tr>
+			<td rowspan=2><a style='' href='Javascript: saveuser();'><img src='save.png' width=20px></a></td></tr>
 		</table>
 		<a href='javascript: regme();'>რეგისტრაცია</a>
 		<br><br>
