--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ function onWatchSuccess(position)
 
 		
 
-	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304; border:1px solid red; '>
+	<div id='chat_div' style='position:fixed; right:10px; bottom:50px; z-index:304;  '>
 		<a href='Javascript: chat_click();' style='position:absolute; top:-25px; right:0px;'><img src='chat.svg' style='width:50px; height:50px;'></a>
 		<div id='chat_window' style='display:inline; width:98%; height:200px; background-color:white; display:none;'>
 			<div id='chat_txt' style='width:99%; border:1px solid gray; height:150px; overflow:auto; background-color:white; color:#e3b202;'>kkk</div>
@@ -559,7 +559,7 @@ function onWatchSuccess(position)
 		</div>
 	</div>
 
-	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252; border:1px solid red; ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+	<a id='call_but'  style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;  ' href='Javascript: call_taxi();'><img src='gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 
 	
@@ -570,7 +570,7 @@ function onWatchSuccess(position)
 
 
 
-		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   border:1px solid red;' >
+		<div id="bottom_menu" style=' width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;   ' >
 			<img src='phone.png'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 		</div>
@@ -592,7 +592,7 @@ function onWatchSuccess(position)
 		<div id='mydiv'></div>
 		<br>
 		<p id="geopos">Finding geolocation...</p>
-		<br><br><br>
+		<br><br><br><Br><br>
 <!--
 	<b>რუქის ტიპი</b><br>
 	<select id='maptype' onChange='changemap();'>
@@ -608,7 +608,7 @@ function onWatchSuccess(position)
 	<option value='10'>Toner MAP (slow)</option>
 	</select>
 	<br><br>-->
-		<div id='erorebi'>Tilebi (zoom:16)</div>
+		<div id='erorebi' style='display:none;'>Tilebi (zoom:16)</div>
 	
 		<center>
 		<b>პროფილი</b>
@@ -617,12 +617,12 @@ function onWatchSuccess(position)
 			<tr><td>პაროლი:</td><td> <input id='mypass' name='mypass' value='yourpass' size=12></td>
 			<td rowspan=2><a style='' href='Javascript: saveuser();'><img src='save.png' width=20px></a></td></tr>
 		</table>
-		<a href='javascript: regme();'>რეგისტრაცია</a>
+		<a href='javascript: regme();' style='background-color:white; border:1px solid gray;  color:black;'>რეგისტრაცია</a>
 		<br><br>
 		
 <!--		<input type='checkbox' id='ignor_cache' name='ignor_cache' onchange='cignore();'> რუქის ქეშის იგნორირება<br>
 		<input type='checkbox' id='ignor_cache_on_wifi' name='ignor_cache_on_wifi' onchange='cignorewifi();' checked> რუქის ქეშის იგნორირება WiFi-სას<br>-->
-		<a href='Javascript: show_map();'>უკან დაბრუნება</a></center>
+		<a href='Javascript: show_map();'  style='background-color:white; border:1px solid gray;  color:black;'>უკან დაბრუნება</a></center>
 	</div>
 </div>
 
@@ -915,12 +915,12 @@ function getmousecoord(event)
 		console.log("get mouse dva on move: "+t2x+" - "+t2y);
 		tdist=Math.sqrt( Math.pow ((t2x-omousex),2) + Math.pow ((t2y-omousey),2) );
 
-		if (tdist-tdist_old>10)
+		if (tdist-tdist_old>15)
 			{
 			zoomme(1);
 			tdist_old=tdist;
 			}
-		else if (tdist-tdist_old<-10)
+		else if (tdist-tdist_old<-15)
 			{
 			zoomme(-1);
 			tdist_old=tdist;
