--- a/index.html
+++ b/index.html
@@ -618,12 +618,12 @@ function onWatchSuccess(position)
 			<td rowspan=2><a style='' href='Javascript: saveuser();'><img src='save.png' width=20px></a></td></tr>
 		</table>
 		<Br><br>
-		<a href='javascript: regme();' style='background-color:white; border:1px solid gray;  color:black; pardding:5px;'>რეგისტრაცია</a>
+		<a href='javascript: regme();' style='background-color:white; border:1px solid gray; display:block;  color:black; padding:5px;'>რეგისტრაცია</a>
 		<br><br>
 		
 <!--		<input type='checkbox' id='ignor_cache' name='ignor_cache' onchange='cignore();'> რუქის ქეშის იგნორირება<br>
 		<input type='checkbox' id='ignor_cache_on_wifi' name='ignor_cache_on_wifi' onchange='cignorewifi();' checked> რუქის ქეშის იგნორირება WiFi-სას<br>-->
-		<a href='Javascript: show_map();'  style='background-color:white; border:1px solid gray;  color:black;pardding:5px; '>უკან დაბრუნება</a></center>
+		<a href='Javascript: show_map();'  style='background-color:white; border:1px solid gray; display:block;  color:black; padding:5px; '>უკან დაბრუნება</a></center>
 	</div>
 </div>
 
