--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ function onDeviceReady()
 	
 	kc=checkIfFileExists("locdata.txt");
 
-	//if (started==0)	
-//		{
-	//	Start();
-	//	}
+	if (started==0)	
+		{
+		Start();
+		}
 	//setmypos();
 	}
 // ------------------------
