--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ function onDeviceReady()
 	document.addEventListener("volumeupbutton", onVolumeUp, false);
 
 	console.log("device ready, getting position");
-	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: true,  maximumAge:0});
-	var opts = { timeout: 5000, enableHighAccuracy: true, maximumAge:0};
+	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: false,  maximumAge:0});
+	var opts = { timeout: 5000, enableHighAccuracy: false, maximumAge:0};
 	watchID = navigator.geolocation.watchPosition(onWatchSuccess, onError, opts);
 	document.addEventListener("resume", onResume, false);
 	
@@ -148,10 +148,10 @@ function onDeviceReady()
 	
 	kc=checkIfFileExists("locdata.txt");
 
-	if (started==0)	
-		{
-		Start();
-		}
+	//if (started==0)	
+	//	{
+	//	Start();
+	//	}
 	//setmypos();
 	}
 // ------------------------
@@ -178,7 +178,7 @@ function MainProg()
 			setmypos();
 			}
 		}
-	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: true,  maximumAge:0});
+	navigator.geolocation.getCurrentPosition(onSuccess, onError, {enableHighAccuracy: false,  maximumAge:0});
 
 	setTimeout("MainProg();",1000);
 	}
@@ -382,7 +382,7 @@ function onResume()
 		{
 		checkConnection();
 	
-		var opts = { timeout: 30000, enableHighAccuracy: true};
+		var opts = { timeout: 30000, enableHighAccuracy: false};
 		watchID = navigator.geolocation.watchPosition(onWatchSuccess, onError, opts);
 	
 		Start();
