--- a/index.html
+++ b/index.html
@@ -586,6 +586,29 @@ function onWatchSuccess(position)
 			</table>-->
 
 
+	
+	<div id='reg_sheet' style='visibility:hidden; position:absolute; left:0px; top:0px; padding:10px; width:100%;'>
+		<br>
+		<br>
+		<br><br><br><Br><br>
+		<center>
+		<b>რეგისტრაცია</b>
+		<table>
+			<tr><td>სახელი გვარი:</td><td> <input id='regname' name='regname' value='' placeholder='სახელი გვარი' size=20></td></tr>
+			<tr><td>ელ.ფოსტა</td><td> <input id='regemail' name='regemail' value=''  placeholder='Email'  size=20></td>
+			<tr><td>პაროლი:</td><td> <input id='regpass' name='regpass' value=''  placeholder='პაროლი' size=12></td>
+			<tr><td>მობ.ნომერი</td><td> <input id='regmob' name='regmob' value='' placeholder='მობ.ნომერი' size=12></td>
+		</table>
+		<Br><br>
+		<a href='#' onclick="window.open('http://design.ge/prius/reg.php', '_system');" style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
+		<br>
+		
+<!--		<input type='checkbox' id='ignor_cache' name='ignor_cache' onchange='cignore();'> რუქის ქეშის იგნორირება<br>
+		<input type='checkbox' id='ignor_cache_on_wifi' name='ignor_cache_on_wifi' onchange='cignorewifi();' checked> რუქის ქეშის იგნორირება WiFi-სას<br>-->
+		<a href='Javascript: show_map();'  style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px; '>უკან დაბრუნება</a></center>
+	</div>
+
+
 
 
 	<div id='settings_sheet' style='visibility:hidden; position:absolute; left:0px; top:0px; padding:10px; width:100%;'>
