--- a/index.html
+++ b/index.html
@@ -640,10 +640,10 @@ function onWatchSuccess(position)
 	
 		<center>
 		<b>პროფილი</b>
-		<div id='login_page' style='width:355px; border:1px solid white;'>
+		<div id='login_page' style='width:355px; '>
 		<table>
-			<tr><td>მობ. ან ელ-ფოსტა:</td><td> <input  type='text'id='myname' name='myname' value='youuser' Placeholder="მობ. ან ელ-ფოსტა" size=18></td></tr>
-			<tr><td>პაროლი:</td><td> <input type='password' id='mypass' name='mypass' value='yourpass' placeholder="პაროლი" size=12></td>
+			<tr><td style='font-size:12px;'>მობ. ან ელ-ფოსტა:</td><td> <input  type='text'id='myname' name='myname' value='youuser' Placeholder="მობ. ან ელ-ფოსტა" size=16></td></tr>
+			<tr><td style='font-size:12px;'>პაროლი:</td><td> <input type='password' id='mypass' name='mypass' value='yourpass' placeholder="პაროლი" size=12></td>
 			<td rowspan=2><a style='' href='Javascript: saveuser();'><img src='save.png' width=20px></a></td></tr>
 		</table>
 		<Br><br>
