--- a/index.html
+++ b/index.html
@@ -221,13 +221,14 @@ function update_data()
 					}
 				if (myloginid>0)
 					{
-					document.getElementById("loggedin_page").style.visbility="visible";
-					document.getElementById("login_page").style.visbility="hidden";
+					document.getElementById("loggedin_page").style.visibility="visible";
+					document.getElementById("login_page").style.visibility="hidden";
+						document.getElementById("regbut").style.display="none";
 					}
 				else
 					{
-					document.getElementById("loggedin_page").style.visbility="hidden";
-					document.getElementById("login_page").style.visbility="visible";
+					document.getElementById("loggedin_page").style.visibility="hidden";
+					document.getElementById("login_page").style.visibility="visible";
 					}
 				}
 			else if (mr.substring(0,4)=="chat")
