--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@ var myloginid=0;
 
 function saveuser()
 	{
-	if (document.getElementById("myname").value!="" and document.getElementById("mypass").value!="")
+	if (document.getElementById("myname").value!="" && document.getElementById("mypass").value!="")
 		{
 		MyUser=document.getElementById("myname").value;
 		MyPass=document.getElementById("mypass").value;
