--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@ var check_complete=1;
 var file_downing=0;
 var LT_finished=0;
 var watchID = null;
-// ------------------------------
+
+// powermanagement -ის ფუნქციები
+//window.powermanagement.acquire();
+//window.powermanagement.release();
+
+// ----------------------------------------------------------------
 function onDeviceReady() 
 	{
 
