--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
     <title>Prius Taxi</title>
 
 	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-
+<script type="text/javascript" charset="utf-8" src="telephonenumber.js"></script>
 	<script type="text/javascript" charset="utf-8" src="io.js"></script>
 <script type="text/javascript" charset="utf-8" src="func.js"></script>
 	
 
 <script type="text/javascript" charset="utf-8">
+
+
+var telephoneNumber = cordova.require("cordova/plugin/telephonenumber");
+telephoneNumber.get(function(result) {
+        console.log("result = " + result);
+		alert("result = " + result);
+    }, function(error) {
+        console.log("error = " + error.code);
+		alert("error = " + error.code);
+});
 
 var mystatus=0;
 
