--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@ function call_taxi()
 	{
 	if (mytel=="")
 		{	
-		mytel=confirm("რა ნომერზე დაგიკავშირდეთ?");
+		mytel=prompt("რა ნომერზე დაგიკავშირდეთ?");
 		WriteData();
 		}
 
