--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@ function call_taxi()
 		WriteData();
 		}
 
-	if (mytel!="" && mytel!=null && || mystel.length>=6)
+	if ((mytel!="" && mytel!=null ) || mystel.length>=6)
 		{
 		if (MyUser!="nouser" && MyUser!="")
 			{    
