--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@ function show_profile(tid)
 
 function call_taxi()
 	{
-	if (mytel=="" || mystel.length<6)
+	if (mytel=="" || mytel.length<6)
 		{	
 		mytel=prompt("რა ნომერზე დაგიკავშირდეთ?");
 		WriteData();
